--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@ html {
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 122 56% 54%; /* #3cb83f */
+    --primary: 214 43% 54%; /* #5B86BA */
     --primary-foreground: 355.7 100% 97.3%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
@@ -26,7 +26,7 @@ html {
     --destructive-foreground: 0 0% 98%;
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
-    --ring: 122 56% 54%;
+    --ring: 214 43% 54%;
     --radius: 0.5rem;
   }
  
@@ -37,7 +37,7 @@ html {
     --card-foreground: 0 0% 98%;
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 122 56% 54%;
+    --primary: 214 43% 54%;
     --primary-foreground: 355.7 100% 97.3%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
@@ -49,7 +49,7 @@ html {
     --destructive-foreground: 0 0% 98%;
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
-    --ring: 122 56% 54%;
+    --ring: 214 43% 54%;
   }
 }
  
